Kubernetes Configs/content-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: content-api
  name: content-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: content-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: content-api
    spec:
      containers:
        - image: content
          name: gtm-container-content
          ports:
            - containerPort: 80
          resources: {}
          imagePullPolicy: Never
      restartPolicy: Always
status: {}
