Kubernetes Configs/content-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: content-api
  name: content-api
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 80
  selector:
    io.kompose.service: content-api
status:
  loadBalancer: {}
