Kubernetes Configs/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 80
  selector:
    io.kompose.service: gateway
status:
  loadBalancer: {}
