Kubernetes Configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gateway
            port:
              number: 8001
